KB-11696 sonar issue fixes (#84)
* KB-11696 sonar issue fixes

* KB-11696 sonar issue fixes